force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Origin, 
&quot;Phone&quot;, &quot;015B0000000oJDJ&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Email&quot;, &quot;015B0000000oJE8&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Chat&quot;, &quot;015B0000000oJE9&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Website&quot;, &quot;015B0000000oJEA&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Web&quot;, &quot;015B0000000oJEA&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Community&quot;, &quot;015B0000000oJEB&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Mobile Device&quot;, &quot;015B0000000oJEC&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Q&amp;A&quot;, &quot;015B0000000oJEB&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Facebook&quot;, &quot;015B0000000oJDH&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Twitter&quot;, &quot;015B0000000oJED&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Google&quot;, &quot;015B0000000oJEE&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Sina Weibo&quot;, &quot;015B0000000oJEF&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Portal&quot;, &quot;015B0000000oJEB&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Instagram&quot;, &quot;015B0000000oJEG&amp;oid=&quot;&amp;$Organization.Id, 
&quot;LinkedIn&quot;, &quot;015B0000000oJEH&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Salesforce IoT&quot;, &quot;015B0000000oJEI&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Text Session&quot;, &quot;015B0000000oJDI&amp;oid=&quot;&amp;$Organization.Id, 
&quot;SMS&quot;, &quot;015B0000000oJDI&amp;oid=&quot;&amp;$Organization.Id, 

&quot;015B0000000oJDJ&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>