force-app/main/default/objects/Case/fields/ChatKey__c.field-meta.xml
<CustomField>
    <fullName>ChatKey__c</fullName>
    <description>Einstein Chatbot uses this to store LiveAgentSessId and is also referenced by trigger on Live Chat Transcript records.</description>
    <label>ChatKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>