force-app/main/default/objects/Case/fields/ckz_Budget_Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>ckz_Budget_Approval_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Approval Requested</label>
    <type>Checkbox</type>
</CustomField>