force-app/main/default/objects/Case/fields/ckz_Budget_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>ckz_Budget_Override_Amount__c</fullName>
    <label>Budget Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>