force-app/main/default/objects/Case/fields/ckz_Credit_Override_Requested__c.field-meta.xml
<CustomField>
    <fullName>ckz_Credit_Override_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Override Requested</label>
    <type>Checkbox</type>
</CustomField>