force-app/main/default/objects/Case/fields/ckz_Credit_Override_Status__c.field-meta.xml
<CustomField>
    <fullName>ckz_Credit_Override_Status__c</fullName>
    <label>Credit Override Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>