force-app/main/default/objects/Case/fields/ckz_Source_Cart__c.field-meta.xml
<CustomField>
    <fullName>ckz_Source_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Cart</label>
    <referenceTo>ccrz__E_Cart__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>