force-app/main/default/objects/Case/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>