force-app/main/default/objects/Case/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <description>Added specifically for use by the Service Wave Analytics dashboard.</description>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>