force-app/main/default/objects/Case/fields/Cumulative_Time__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Time__c</fullName>
    <label>Cumulative Time (Seconds)</label>
    <summarizedField>Session_Time__c.Duration__c</summarizedField>
    <summaryForeignKey>Session_Time__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>