force-app/main/default/objects/Case/fields/deviceId__c.field-meta.xml
<CustomField>
    <fullName>deviceId__c</fullName>
    <externalId>true</externalId>
    <label>deviceId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>