force-app/main/default/objects/Case/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>8*(IF( ISNULL( DateTime_Closed_c__c  ), NOW() -  DateTime_Opened_c__c ,  DateTime_Closed_c__c  -  DateTime_Opened_c__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>