force-app/main/default/objects/Case/fields/ED_Leading_Causes__c.field-meta.xml
<CustomField>
    <fullName>ED_Leading_Causes__c</fullName>
    <label>ED Leading Causes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>