force-app/main/default/objects/Case/fields/ED_Outcome__c.field-meta.xml
<CustomField>
    <fullName>ED_Outcome__c</fullName>
    <label>ED Predicted CSAT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>