force-app/main/default/objects/Case/fields/Est_Cost__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost__c</fullName>
    <description>Estimated cost to perform the service tasks.</description>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>