force-app/main/default/objects/Case/fields/KB_Article_Attached__c.field-meta.xml
<CustomField>
    <fullName>KB_Article_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when there is a KB Article attached to the Case.</description>
    <inlineHelpText>Checked when there is a KB Article attached to the Case.</inlineHelpText>
    <label>KB Article Attached</label>
    <type>Checkbox</type>
</CustomField>