force-app/main/default/objects/Case/fields/MilestoneStatus__c.field-meta.xml
<CustomField>
    <fullName>MilestoneStatus__c</fullName>
    <label>Milestone Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>