force-app/main/default/objects/Case/fields/NBA_to_Display__c.field-meta.xml
<CustomField>
    <fullName>NBA_to_Display__c</fullName>
    <label>NBA to Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>