force-app/main/default/objects/Case/fields/Offer_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Offer_Voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Voucher</label>
    <type>Checkbox</type>
</CustomField>