force-app/main/default/objects/Case/fields/OpenGraph_Image__c.field-meta.xml
<CustomField>
    <fullName>OpenGraph_Image__c</fullName>
    <label>OpenGraph Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>