force-app/main/default/objects/Case/fields/OpenGraph_Type__c.field-meta.xml
<CustomField>
    <fullName>OpenGraph_Type__c</fullName>
    <label>OpenGraph Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>