force-app/main/default/objects/Case/fields/OpenGraph_Url__c.field-meta.xml
<CustomField>
    <fullName>OpenGraph_Url__c</fullName>
    <label>OpenGraph Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>