force-app/main/default/objects/Case/fields/Org_Cust_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_Cust_Case_ID__c</fullName>
    <label>Org Cust Case ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>