force-app/main/default/objects/Case/fields/Product_Family_KB__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_KB__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial_Products</fullName>
                <label>Commercial Products</label>
            </value>
            <value>
                <fullName>Residential Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>