force-app/main/default/objects/Case/fields/Response_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_mins__c</fullName>
    <label>Response Time (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>