force-app/main/default/objects/Case/fields/SCQuickSetup__chatKey__c.field-meta.xml
<CustomField>
    <fullName>SCQuickSetup__chatKey__c</fullName>
    <label>chatKey</label>
    <length>64</length>
    <type>Text</type>
</CustomField>