force-app/main/default/objects/Case/fields/Send_Email_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Trigger</label>
    <type>Checkbox</type>
</CustomField>