force-app/main/default/objects/Case/fields/Send_FieldService__c.field-meta.xml
<CustomField>
    <fullName>Send_FieldService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Field Service</label>
    <type>Checkbox</type>
</CustomField>