force-app/main/default/objects/Case/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <description>Used by Salesforce Surveys to create a link to a survey that can be sent out when the case is closed.</description>
    <label>Survey URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>