force-app/main/default/objects/Case/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>