force-app/main/default/objects/Case/recordTypes/Case.recordType-meta.xml
<RecordType>
    <fullName>Case</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>Primary case record type used for most cases.</description>
    <label>Case</label>
</RecordType>