force-app/main/default/objects/Case/recordTypes/Chat_Case.recordType-meta.xml
<RecordType>
    <fullName>Chat_Case</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>Used specifically for Chat cases to drive the chat-specific page layout.</description>
    <label>Chat Case</label>
</RecordType>