force-app/main/default/objects/Case/recordTypes/Digital_Engagement_Social_Case.recordType-meta.xml
<RecordType>
    <fullName>Digital_Engagement_Social_Case</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Digital Engagement - Social Case</label>
</RecordType>