force-app/main/default/objects/Case/recordTypes/SCQuickSetup__Chat_Live_Agent.recordType-meta.xml
<RecordType>
    <fullName>SCQuickSetup__Chat_Live_Agent</fullName>
    <active>false</active>
    <businessProcess>SCQuickSetup__Mater</businessProcess>
    <label>Chat Live Agent</label>
</RecordType>