force-app/main/default/objects/Case/recordTypes/SCQuickSetup__SOS_Recodr.recordType-meta.xml
<RecordType>
    <fullName>SCQuickSetup__SOS_Recodr</fullName>
    <active>false</active>
    <businessProcess>SCQuickSetup__Mater</businessProcess>
    <label>SOS Recodr</label>
</RecordType>