force-app/main/default/objects/Case/listViews/Billing_Cases.listView-meta.xml
<ListView>
    <fullName>Billing_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Sub_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Type__c</field>
        <operation>equals</operation>
        <value>Billing</value>
    </filters>
    <label>Billing Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>SupportAgents</group>
    </sharedTo>
</ListView>