force-app/main/default/objects/Case/listViews/My_Cases_Community.listView-meta.xml
<ListView>
    <fullName>My_Cases_Community</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Community_Contact_Match__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Community Cases</label>
    <language>en_US</language>
</ListView>