force-app/main/default/objects/Case/listViews/Tier_2_Queue.listView-meta.xml
<ListView>
    <fullName>Tier_2_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Tier 2 Queue</label>
    <language>en_US</language>
    <queue>Tier2Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>